# tello_vggt

./: .gitignore  ARCHITECTURE_REFACTORED.md  CORRECTIONS_SUMMARY.md  DOCUMENTATION_INDEX.md  FILES_GUIDE.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  README_NEW.md  REFACTORING_COMPLETE.md  START_HERE.md  STATUS_FINAL.md  config.example.yaml  config.yaml  pyproject.toml  rebuild_mission.py  run_tello_reconstruction.py  run_video_reconstruction.py
src/tello_vggt/: __init__.py  __main__.py  mission_loader.py  vggt_chunk_fusioner.py  vggt_chunk_result.py  vggt_omega_tello_inferencer.py  video_recorder.py
src/tello_vggt/cli/: __init__.py  main.py
src/tello_vggt/cli/commands/: __init__.py  depth_anything_3.py  gaussian_splatting.py  rebuild.py  record.py  semantic_segmentation.py  video.py
src/tello_vggt/core/: __init__.py  config.py  logging_config.py  mission.py
src/tello_vggt/rendering/: __init__.py  deep_anything_v3.py  gaussian_splatting.py
tests/: __init__.py  conftest.py  test_config.py  test_depth_anything_3.py  test_mission.py
