[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tello-vggt"
version = "0.1.0"
description = "DJI Tello 3D reconstruction using VGGT-Omega"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Wilfried Thomare" }
]

dependencies = [
    # Core
    "numpy>=2.2",
    "scipy>=1.15",

    # Images / vidéo
    "opencv-python>=4.11",
    "pillow>=11.2",

    # Drone
    "djitellopy>=2.5",

    # 3D
    "trimesh>=4.7",
    "pygltflib>=1.16",

    # Utilitaires
    "tqdm>=4.67",
    "psutil>=7.0",
    "pyyaml>=6.0",

    # Science
    "matplotlib>=3.10",
    "pandas>=2.3",

    # Notebooks
    "jupyterlab>=4.4",
    "ipykernel>=6.29",
]

[project.optional-dependencies]

vggt = [
    "einops>=0.8",
    "timm>=1.0",
    "transformers>=4.53",
    "accelerate>=1.8",
    "huggingface-hub>=0.33",
    "safetensors>=0.5",
]

dev = [
    "black>=25.1",
    "isort>=6.0",
    "ruff>=0.12",
    "pytest>=8.4",
    "pytest-cov>=6.2",
]

wandb = [
    "wandb>=0.21",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]